[package]
name = "usbd-midi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2"

[patch.crates-io]
usb-device = { git = "https://github.com/agausmann/usb-device.git", branch = "patch/usbd-midi" }
